styles/home.css
html, body, section {
	height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
}
section{
	position: relative;
    overflow:hidden!important;
}

.section{
	height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
}

.interSectionWeAreHiring{
    width: 100%!important;
	height:15%;
/*    padding-top: 6%;*/
	background-repeat: no-repeat;
    background-position: center;
    -webkit-background-size: contain;
    -moz-background-size: contain;
    -o-background-size: contain;
    background-size: contain;
    z-index: 100;
    background-color: #75757D;
    display: block;
  	position: relative;

}
.triangle{
	width: 100%!important;
	height: 25%!important;
	background-image: url('../images/tr1.png');
	background-repeat: no-repeat;
    background-position: center;
    -webkit-background-size: 100% 100%;
    -moz-background-size: 100% 100%;
    -o-background-size: 100% 100%;
    background-size: 100% 100%;
    position: absolute;
    bottom: 0px;
}
.invertedTriangle{
	width: 100%!important;
	height: 25%!important;
	background-image: url('../images/tr2.png');
	background-repeat: no-repeat;
    background-position: center;
    -webkit-background-size: 100% 100%;
    -moz-background-size: 100% 100%;
    -o-background-size: 100% 100%;
    background-size: 100% 100%;
    position: absolute;
    top: 0px;
    
}

.whiteTriangle{
	width: 100%!important;
	height: 12.5%!important;
	background-image: url('../images/triangulo_blanco.png');
	background-repeat: no-repeat;
    background-position: center;
    -webkit-background-size: 100% 100%;
    -moz-background-size: 100% 100%;
    -o-background-size: 100% 100%;
    background-size: 100% 100%;
    position: absolute;
    bottom: 0px;
}

.degrade{
    width: 100%!important;
    height: 20%!important;
    background-image: url('../images/degrade.png');
    background-repeat: no-repeat;
    background-position: center;
    -webkit-background-size: 100% 100%;
    -moz-background-size: 100% 100%;
    -o-background-size: 100% 100%;
    background-size: 100% 100%;
    position: absolute;
    bottom: 0px;
}
.intersectionLastWorks{
/*    background-color: transparent;*/
    position:static; 
    top:0!important;
    height: 25%!important;

}
.lastWorksTriangle{
    width: 100%!important;
    height: 12.5%!important;
    background-image: url('../images/triangulo_blanco_invertido.png');
    background-repeat: no-repeat;
    background-position: center;
    -webkit-background-size: 100% 100%;
    -moz-background-size: 100% 100%;
    -o-background-size: 100% 100%;
    background-size: 100% 100%;
    position: absolute;
    top: 0px;
}

.invertedWhiteTriangle{
	width: 100%!important;
	height: 25%!important;
	background-image: url('../images/triangulo_blanco_invertido.png');
	background-repeat: no-repeat;
    background-position: center;
    -webkit-background-size: 100% 100%;
    -moz-background-size: 100% 100%;
    -o-background-size: 100% 100%;
    background-size: 100% 100%;
    position: absolute;
    top: 0px;
    
}
.locationTriangle{
    width: 100%!important;
    height: 17.5%!important;
    background-image: url('../images/triangulo_blanco.png');
    background-repeat: no-repeat;
    background-position: center;
    -webkit-background-size: 100% 100%;
    -moz-background-size: 100% 100%;
    -o-background-size: 100% 100%;
    background-size: 100% 100%;
    position: absolute;
    bottom: 0px;
    
}

#cranio{
	background-image: url('../images/cranio.jpg');
	background-repeat: no-repeat;
   	background-attachment: fixed;
    background-position: center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;	
    background-color: red;
    height: 100%!important;
    position: relative;
}

.flags{
    position:absolute;
    top:5px;
    right:5px;
}

.flag{
    float:left;
    width:50px;

}

#whatWeDo{
	height: 110%!important;

	position:relative;
	
}
#mobileWhatWeDo{
    height: auto;   
}

#mobileTechnology{
    height: auto;   
}

#theTeam{
	background-color: #25252D;
	height: 85%!important;
	position: relative;

}
#lastWorks{
	height: auto!important;
    padding-top: 7%;
	position: relative;
}
#haveAnIdea{

	background-image: url('../images/foto_galletitas.jpg');
    background-repeat: no-repeat;
    /* 	background-attachment: fixed;*/
    background-position: center;
    -webkit-background-size: 100% 100%;
    -moz-background-size: 100% 100%;
    -o-background-size: 100% 100%;
    background-size: 100% 100%;	
    display: block;
  	max-width: 100%;
  	height: 100%!important;	
    padding-top: 7.5%;
  	position: relative;
}
#location{
	background-color: white;
	height: 15%!important;
	position: relative;
    z-index: 400;
}
#googleMap{
   background-image: url('http://maps.google.com/maps/api/staticmap?center=-34.585455,-58.429021&zoom=13&scale=2&markers=-34.585451,-58.429075&size=1080x300&sensor=false');
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    background-color: grey; 
    height: 70%!important; 
    display: block;
    max-width: 100%;
	position: relative;
    margin: 0;
    padding: 0;
}
.imagenGoogleMap{
    height: 100%;
    width:100%;
}
#icons{
	background-color: #25252D;
	height: 15%!important;
	position: relative;
    padding-bottom: 3px;
}

.myContainer {
    height: 100%;
    width: 100%;
}
.cranioRow{
    margin-top: 10%;
}
.divHaveAnIdea{
	background-image: url('../images/have_an_idea.png');
    background-repeat: no-repeat;
    background-position: center;
    -webkit-background-size: 100% 100%;
    -moz-background-size: 100% 100%;
    -o-background-size: 100% 100%;
    background-size: 100% 100%;	
    display: block;
  	max-width: 100%;
    max-height: 100%;
  	height: 85%!important;
    position: relative;
}

#rowHaveAnIdea{
    padding-top: 5%;
     
}

.hardwareDefinitionDiv{
    margin-top: 2%!important;
}

.softwareDefinitionDiv{
/*    margin-top:200px!important;*/
    margin-top: 18%!important;
}
.softwareIconsDiv{
/*    height: 70%!important;*/
  /*  min-height: 100%!important;*/
    
}
.hardwareIconsDiv{
    height: 100%!important;
    min-height: 100%!important;
    
}
.singleIconDiv{
    
   /* min-height: 60px;
    padding: 29px;
    margin-bottom: 60px;*/
    height: 35%!important;
    display: inline;
    overflow: visible;
}
.iconImages{
    height: 70px;
}
.onlyRow{
	height:100%!important;

}
.miniSize{
	font-size: 100%;
}

#mapContainer{
	 margin: 0;
     padding: 0;
	 width: 100%;
	 height:100%;
	 position: relative;

}


.centered{
	color: #000000;
	text-align: center;
}
.black{
	color: #000000;
}
.white{
	color: #ffffff
}

.iconTwitter{
    background-image: url('../images/twitter_icon.png');
    background-repeat: no-repeat;
    background-position: center;
    -webkit-background-size: contain;
    -moz-background-size: contain;
    -o-background-size: contain;
    background-size: contain; 
}
.iconFacebook{
    background-image: url('../images/facebook_icon.png');
    background-repeat: no-repeat;
    background-position: center;
    -webkit-background-size: contain;
    -moz-background-size: contain;
    -o-background-size: contain;
    background-size: contain; 
}
.iconGitHub{
    background-image: url('../images/github_icon.png');
    background-repeat: no-repeat;
    background-position: center;
    -webkit-background-size: contain;
    -moz-background-size: contain;
    -o-background-size: contain;
    background-size: contain; 
}
.iconMail{
    background-image: url('../images/mail_icon.png');
    background-repeat: no-repeat;
    background-position: center;
    -webkit-background-size: contain;
    -moz-background-size: contain;
    -o-background-size: contain;
    background-size: contain; 
}
.iconLinkedin{
    background-image: url('../images/linkedin_icon.png');
    background-repeat: no-repeat;
    background-position: center;
    -webkit-background-size: contain;
    -moz-background-size: contain;
    -o-background-size: contain;
    background-size: contain; 
}

.icon{
    opacity: 0.7;
   transition: opacity .25s ease-in-out;
   -moz-transition: opacity .25s ease-in-out;
   -webkit-transition: opacity .25s ease-in-out;
}
.icon:hover{
     opacity: 1;
}


.hardAndSoftRow{
    margin-top: 15%;
    height: 70%;
    margin: 0;
    padding: 0;
/*    min-height: 70%;
    max-height: 100%;*/
}
.hsImage{
    vertical-align: middle;
    width: 80%
    margin-left: auto;
    margin-right: auto;
}
.mobilehsImage{
    vertical-align: middle;
    width: 250px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 30px;
}

.frame{
    overflow: visible;
}
.invisible{
    display: none;
}
.inline{
    display: inline;
}

.mobileWebIcon{
    height: 120px!important;
    margin-left: auto;
    margin-right: auto;
}
.worksImages{
    width: 95%!important;
    margin-left: auto;
    margin-right: auto;
}
.worksDiv{
    margin-bottom: 15%;
}
.informacion{
    display: none;
}
#weAreHiringButton{
    position: absolute;
    top: 50%;
    left: 50%;
}
.haveAnIdeaContent{
    position: absolute;
    width: auto; 
    height: auto;
    top: 50%;
  /*  left: 50%;*/

}
.areasModel{
    background-color: grey;
    text-align: left;
    color: #25252D;
    margin-top: 16px;
    width: 100%;
    border-left: 0;
    border-top: 0;
    border-right: 0;
    border-bottom: 3px solid white;

}
.myModalContent{
    background-color: #25252D;
    border: 1px solid white;
    height: auto;
    border-radius:0; 
    color:white;
    position: relative;
  
  -webkit-background-clip: padding-box;
          background-clip: padding-box;

  outline: 0;
  -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
          box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
   -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
            box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
}
.myModalBody{
    height: 300px;
}
.message{
    height: 100px;
}

.fotosTeam{
    width:100%;
    display: inline;
    bottom: 0;
    position: absolute;
}
.divsFotos{
    position: absolute;
    bottom: 0;
    width: 15%;
    height: 60%;
    display: inline;
}
.color{
    display: none;
}

#foto1{
    left: 2.5%;
}
#foto2{
    left: 12.5%;
}
#foto3{
    left: 22.5%;
}
#foto4{
    left: 32.5%;
}
#foto5{
    left: 42.5%;
}
#foto6{
    left: 52.5%;
}
#foto7{
    left: 62.5%;
}
#foto8{
    left: 72.5%;
}
#foto9{
    left: 82.5%;
}

